--- a/GmailDraftsAutomation/package.json
+++ b/GmailDraftsAutomation/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "oauth:setup": "tsx src/auth/oauth-setup.ts",
     "rag:refresh": "npm run build && node dist/index.js --rag-refresh",
+    "gmail:sync": "npm run build && node dist/index.js --gmail-sync",
+    "gmail:sync:full": "npm run build && node dist/index.js --gmail-sync --full-sync",
+    "gmail:watch": "npm run build && node dist/index.js --gmail-sync --watch",
     "email:automation": "npm run build && node dist/index.js --email-automation",
     "run:all": "npm run build && node dist/index.js --all"
   },
