--- a/GmailDraftsAutomation/package.json
+++ b/GmailDraftsAutomation/package.json
@@ -17,7 +17,8 @@
     "gmail:sync:full": "npm run build && node dist/index.js --gmail-sync --full-sync",
     "gmail:watch": "npm run build && node dist/index.js --gmail-sync --watch",
     "email:automation": "npm run build && node dist/index.js --email-automation",
-    "run:all": "npm run build && node dist/index.js --all"
+    "run:all": "npm run build && node dist/index.js --all",
+    "watch:all": "npm run build && node dist/index.js --watch-all"
   },
   "keywords": [
     "gmail",
